# vimv

./: Cargo.toml  license.txt  readme.md
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci-cd.yml  gh-release.yml
src/: main.rs
