[package]
name = "vimv"
version = "1.4.1"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
description = "A command line utility for batch-renaming files using a text editor."
license = "MIT"
homepage = "https://www.dmulholl.com/dev/vimv.html"
repository = "https://github.com/dmulholl/vimv"
readme = "readme.md"

[dependencies]
arguably = "2.0.0"
edit = "0.1.2"
trash = "1.2"
rand = "0.7.3"
