[package]
name = "vimv"
version = "2.0.0-alpha1"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2018"
description = "A command line utility for batch-renaming files using a text editor."
license = "0BSD"
homepage = "https://www.dmulholl.com/dev/vimv.html"
repository = "https://github.com/dmulholl/vimv"
readme = "readme.md"

[dependencies]
arguably = "2.0"
edit = "0.1.3"
trash = "2.0"
rand = "0.8.4"
colored = "2.0"
