[package]
name = "vimv"
version = "3.1.0"
authors = ["Darren Mulholland <dmulholl@tcd.ie>"]
edition = "2021"
description = "A command line utility for batch-renaming files using a text editor."
license = "0BSD"
homepage = "https://www.dmulholl.com/dev/vimv.html"
repository = "https://github.com/dmulholl/vimv"
readme = "readme.md"

[dependencies]
arguably = "2.2.0"
edit = "0.1.4"
trash = "3.0.1"
rand = "0.8.5"
colored = "2.0"
